.provarCaches/00D5f000005vwGkEAI/objects/rstk__pocontprice__c.object
<CustomObject>
    <description>pocontprice__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pocontprice_poconttype__r.rstk__poconttype_type__c &amp; &apos;_&apos; &amp;  rstk__pocontprice_povendpoaddr__r.rstk__externalid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pocontprice_poconttype__r.rstk__poconttype_type__c + &quot;(&quot; + 
 rstk__pocontprice_povendpoaddr__r.Name + &quot;)&quot;</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontprice_cost__c</fullName>
        <inlineHelpText>Cost to replace container.</inlineHelpText>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontprice_poconttype__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Lookup to container type table.  Must be valid container type.  Required.</inlineHelpText>
        <label>Container Type</label>
        <referenceTo>rstk__poconttype__c</referenceTo>
        <relationshipLabel>Container Cost &amp; Price (Container Type)</relationshipLabel>
        <relationshipName>poconttypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontprice_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Owner of this container.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Container Cost &amp; Price (Vendor)</relationshipLabel>
        <relationshipName>povends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontprice_povendpoaddr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid address for this vendor.  This is where the container originated.</inlineHelpText>
        <label>Vendor Address</label>
        <referenceTo>rstk__povendpoaddr__c</referenceTo>
        <relationshipLabel>Container Cost &amp; Price (Vendor Address)</relationshipLabel>
        <relationshipName>povendpoaddrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pocontprice_price__c</fullName>
        <inlineHelpText>Price of replacement container.</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Container Cost and Price</label>
    <listViews>
        <fullName>rstk__RS_Container_Cost_Price</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontprice_poconttype__c</columns>
        <columns>rstk__pocontprice_povend__c</columns>
        <columns>rstk__pocontprice_povendpoaddr__c</columns>
        <columns>rstk__pocontprice_cost__c</columns>
        <columns>rstk__pocontprice_price__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Container Cost &amp; Price</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Container Cost and Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Verify_Cost</fullName>
        <active>true</active>
        <description>Verified Cost Value</description>
        <errorConditionFormula>IF ( ISBLANK( rstk__pocontprice_cost__c ), false,
   IF (rstk__pocontprice_cost__c &lt; 0, true, false))</errorConditionFormula>
        <errorMessage>Invalid Value for Cost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Verify_Price</fullName>
        <active>true</active>
        <description>Verified PriceValue</description>
        <errorConditionFormula>IF ( ISBLANK( rstk__pocontprice_price__c ), false,
   IF (rstk__pocontprice_price__c &lt; 0, true, false))</errorConditionFormula>
        <errorMessage>Invalid Value for Price</errorMessage>
    </validationRules>
</CustomObject>